# chelsa_cmip6

./: README.md  chelsa_cmip6.toml  example.sh  setup.cfg  setup.py
src/chelsa_cmip6/: BioClim.py  GetClim.py  run_chelsa_cmip6.py
tests/: tests.py  toNcdf.sh
