[metadata]
name = chelsa_cmip6
version = 1.3
author = Dirk Nikolaus Karger
author_email = dirk.karger@wsl.ch
description = This package contains function to create monthly high-resolution climatologies
    for a selected geographic area for min-, max-, and mean temperature, precipitation rate
    and bioclimatic variables from anomalies and using CHELSA V2.1 as
    baseline high resolution climatology. Only works for GCMs for
    which tas, tasmax, tasmin, and pr are available.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlabext.wsl.ch/karger/chelsa_cmip6
project_urls =
    Bug Tracker = https://github.com/pypa/chelsa_cmip6/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: xarray numpy rasterio pandas zarr gcsfs datetime esgf-pyclient siphon
python_requires = >=3.6

[options.packages.find]
where = src
